dropdown menu refactored, mobile layout bugs fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -407,6 +407,7 @@ nav ul{
     margin-right: 10px;
     background-color: var(--chip-bg-color);
 }
+.dropdown-item,
 .sell-buy li,
 .sell-buy label{
     list-style-type: none;
@@ -484,6 +485,7 @@ nav ul{
 .form-ad-row-radio input[type="radio"]:checked+label{
     background-color: var(--active-bg-color);
 }
+.sort,
 .currencies{
     padding: 0;
     position: relative;
@@ -498,7 +500,7 @@ nav ul{
     list-style-type: none;
     padding: 10px;
 }
-.currencies-hidden{
+.dropdown-hidden{
     display: none;
     background-color: var(--main-bg-color);
     -webkit-box-shadow: -1px 13px 8px 0px rgba(34, 60, 80, 0.2);
@@ -512,18 +514,18 @@ nav ul{
     top: 100%;
     right: 0;
 }
-.currencies-hidden li{
+.dropdown-hidden li{
     padding: 0 14px;
 }
-.currencies-hidden  li a{
+.dropdown-hidden li a{
     display: block;
     padding: 10px;
     border-top: #D6D6D6 1px solid;
 }
-.currencies-hidden  li:first-child a{
+.dropdown-hidden  li:first-child a{
     border: unset
 }
-.currencies-hidden  li:hover{
+.dropdown-hidden  li:hover{
     background-color: var(--active-bg-color);
 }
 .with-arrow{
@@ -534,6 +536,8 @@ nav ul{
     align-items: center;
     justify-content: center;
 }
+
+.sort .with-arrow,
 .currencies .with-arrow{
     padding: 5px 10px;
     min-width: 80px;
@@ -549,6 +553,7 @@ nav ul{
 .with-arrow:hover{
     background-color: var(--active-bg-color);
 }
+.sort .with-arrow::after,
 .currencies .with-arrow::after,
 .with-arrow a::after{
     content: '';
@@ -563,6 +568,12 @@ nav ul{
     background-position: center;
     cursor: pointer;
 }
+.with-arrow-rarr-span,
+.dropdown-hidden .with-arrow-rarr a{
+    display: flex;
+    align-items: center;
+}
+.with-arrow-rarr-span::after,
 .with-arrow-rarr a::after,
 .back-home::before{
     content: "";
@@ -771,6 +782,9 @@ nav ul{
     text-decoration: underline;
     font: var(--para-small-font);
 }
+.form-open-span{
+    display: none;
+}
 @media (min-width: 992px) and (max-height: 460px){
     .sorting-column{
         position: static;
@@ -789,6 +803,7 @@ nav ul{
     .logo{
         border-radius: 0;
         padding: 0 15px;
+        margin: 0 15px;
     }
     .main{
         padding: 0;
@@ -842,6 +857,12 @@ nav ul{
         background: url(/img/filter-icon.svg) no-repeat;
         display: inline-block;
     }
+    .currency-title{
+        grid-row: 6;
+    }
+    .nav-currencies{
+        grid-row: 7;
+    }
     .sorting-column-collapsed .currencies,
     .sorting-column-collapsed .sort,
     .sorting-column-collapsed .chip,
@@ -879,19 +900,33 @@ nav ul{
     }
 }
 
+@media (max-width: 921px){
+    .logo{
+        margin: 0;
+    }
+}
 @media (max-width: 768px){
     .form-open{
         font-size: 0;
-        background: url(/img/add-post.svg) no-repeat;
-        background-size: contain;
-        width: 33px;
-        height: 33px;
+        background-color: var(--logo-color);
+        width: 30px;
+        height: 30px;
         border: unset;
+        border-radius: 50%;
         padding: 0;
         background-position-y: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    .form-open:hover{
-        background-color: unset;
+    .form-open-span{
+        display: inline-block;
+        font-size: 26px;
+        font-weight: 100;
+        color: var(--main-bg-color);
+    }
+    .form-bg-open+.form-open .form-open-span{
+        transform: rotate(45deg);
     }
 }
 @media (max-width: 580px){
@@ -975,5 +1010,13 @@ nav ul{
 @media (max-width: 450px){
     .nav-wrapper{
         grid-template-columns: repeat(3, max-content);
+    }
+}
+@media (max-height: 600px){
+    .form-wrapper{
+        top: 2%;
+    }
+    .form-ad-row input{
+        padding: 6px 10px;
     }
 }
